update github link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <canvas id="canvas"> </canvas>
 
     <a
-      href="https://www.github.com/mostafa7904/star-audio-visualizer"
+      href="https://github.com/mostafa7904/Stars-Audio-Visualizer"
       class="github-logo"
     >
       <img width="50" height="50" src="./GitHub-Mark.png" alt="Github" />
